--- a/portfolio.html
+++ b/portfolio.html
@@ -11,6 +11,7 @@
       href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
       rel="stylesheet"
     />
+    <link rel="stylesheet" href="./css/styles.css" />
     <style>
       .text {
         font-family: 'Raleway', sans-serif;
@@ -41,6 +42,136 @@
         <li><bottom type="bottom">Marketing</bottom></li>
       </ul>
     </section>
+    <div>
+      <ul>
+        <li>
+          <figure>
+            <img
+              src="https://raw.githubusercontent.com/LuizaRaczylo/goit-markup-hw-02/main/images/Technocrack.jpg"
+              alt="laptop ze zdjęciami trzech osób"
+              width="370"
+              height="294"
+            />
+            <figcaption>
+              <span>Technocrack</span>
+              <p>Strona internetowa</p>
+            </figcaption>
+          </figure>
+        </li>
+        <li>
+          <figure>
+            <img
+              src="https://raw.githubusercontent.com/LuizaRaczylo/goit-markup-hw-02/main/images/Grafika%20New%20Orlean%20vs%20Golden%20Star.jpg"
+              alt="koszykarze"
+              width="370"
+              height="294"
+            />
+            <figcaption>
+              <span>Grafika New Orlean vs Golden Star</span>
+              <p>Dizajn</p>
+            </figcaption>
+          </figure>
+        </li>
+        <li>
+          <figure>
+            <img
+              src="https://raw.githubusercontent.com/LuizaRaczylo/goit-markup-hw-02/main/images/Restauracja%20Seafood.jpg"
+              alt="napis The Seafood Restaurant na tle ryby"
+              width="370"
+              height="294"
+            />
+            <figcaption>
+              <span>Restauracja Seafood</span>
+              <p>Aplikacja</p>
+            </figcaption>
+          </figure>
+        </li>
+        <li>
+          <figure>
+            <img
+              src="https://raw.githubusercontent.com/LuizaRaczylo/goit-markup-hw-02/main/images/Projekt%20Prime.jpg"
+              alt="słuchawki nauszne czarne"
+              width="370"
+              height="294"
+            />
+            <figcaption>
+              <span>Projekt Prime</span>
+              <p>Marketing</p>
+            </figcaption>
+          </figure>
+        </li>
+        <li>
+          <figure>
+            <img
+              src="https://raw.githubusercontent.com/LuizaRaczylo/goit-markup-hw-02/main/images/Projekt%20Boxes.jpg"
+              alt="dwa pudełka"
+              width="370"
+              height="294"
+            />
+            <figcaption>
+              <span>Projekt Boxes</span>
+              <p>Aplikacja</p>
+            </figcaption>
+          </figure>
+        </li>
+        <li>
+          <figure>
+            <img
+              src="https://raw.githubusercontent.com/LuizaRaczylo/goit-markup-hw-02/main/images/Inspiration%20has%20no%20borders.jpg"
+              alt="mapa świata otwarta w laptopie"
+              width="370"
+              height="294"
+            />
+            <figcaption>
+              <span>Inspiration has no Borders</span>
+              <p>Strona internetowa</p>
+            </figcaption>
+          </figure>
+        </li>
+        <li>
+          <figure>
+            <img
+              src="https://raw.githubusercontent.com/LuizaRaczylo/goit-markup-hw-02/main/images/Magazyn%20Limited%20Edition.jpg"
+              alt="otwarty magazyn"
+              width="370"
+              height="294"
+            />
+            <figcaption>
+              <span>Magazyn Limited Edition</span>
+              <p>Dizajn</p>
+            </figcaption>
+          </figure>
+        </li>
+        <li>
+          <figure>
+            <img
+              src="https://raw.githubusercontent.com/LuizaRaczylo/goit-markup-hw-02/main/images/Projekt%20Lab.jpg"
+              alt="biała zawieszka z napisem"
+              width="370"
+              height="294"
+            />
+            <figcaption>
+              <span>Projekt LAB</span>
+              <p>Marketing</p>
+            </figcaption>
+          </figure>
+        </li>
+        <li>
+          <figure>
+            <img
+              src="https://raw.githubusercontent.com/LuizaRaczylo/goit-markup-hw-02/main/images/Growing%20Business.jpg"
+              alt="osoba pracująca na laptopie"
+              width="370"
+              height="294"
+            />
+            <figcaption>
+              <span>Growing Business</span>
+              <p>Aplikacja</p>
+            </figcaption>
+          </figure>
+        </li>
+      </ul>
+    </div>
 
     <footer>
       <a href="https://www.google.pl/">WebStudio</a>
