--- a/portfolio.html
+++ b/portfolio.html
@@ -33,15 +33,13 @@
       <a href="mailto:info@devstudio.com">info@devstudio.com</a>
       <a href="tel:+48111111111">+48 111 111 111</a>
     </header>
-    <section>
-      <ul>
-        <li><bottom type="bottom">Wszystkie</bottom></li>
-        <li><bottom type="bottom">Strony</bottom></li>
-        <li><bottom type="bottom">Aplikacje</bottom></li>
-        <li><bottom type="bottom">Dizajn</bottom></li>
-        <li><bottom type="bottom">Marketing</bottom></li>
-      </ul>
-    </section>
+    <div>
+      <button type="button">Wszystkie</button>
+      <button type="button">Strony</button>
+      <button type="button">Aplikacje</button>
+      <button type="button">Dizajn</button>
+      <button type="button">Marketing</button>
+    </div>
     <div>
       <ul>
         <li>
