--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
       <h1>EFEKTYWNE ROZWIĄZANIA DLA WASZEGO BIZNESU</h1>
       <button type="button">Zamów usługę</button>
     </section>
-      <div>
+      <section>
         <ul>
           <li>
             <h3>LOREM IPSUM</h3>
@@ -95,45 +95,64 @@
           </li>
         </ul>
       </section>
-    </main>
-
     <section>
       <h2>Nasz zespół</h2>
       <ul>
         <li>
+          <figure>
           <img
-            src="https://raw.githubusercontent.com/LuizaRaczylo/goit-markup-hw-01/main/images/team%20card%201.jpg"
+            src="https://raw.githubusercontent.com/LuizaRaczylo/goit-markup-hw-02/main/images/John%20Doe%201.jpg"
             alt="Product Designer"
             width="270"
-            height="368"
+            height="260"
           />
+          <figcaption>
+            <span>John Doe</span><p>Product Designer</p>
+          </figcaption>
+          </figure>
         </li>
         <li>
+          <figure>
           <img
-            src="https://raw.githubusercontent.com/LuizaRaczylo/goit-markup-hw-01/main/images/team%20card%202.jpg"
+            src="https://raw.githubusercontent.com/LuizaRaczylo/goit-markup-hw-02/main/images/John%20Doe%202.jpg"
             alt="Frontend Developer"
             width="270"
-            height="368"
+            height="260"
           />
+          <figcaption>
+            <span>John Doe</span><p>Frontend Developer</p>
+          </figcaption>
+          </figure>
         </li>
         <li>
+          <figure>
           <img
-            src="https://raw.githubusercontent.com/LuizaRaczylo/goit-markup-hw-01/main/images/team%20card%203.jpg"
+            src="https://raw.githubusercontent.com/LuizaRaczylo/goit-markup-hw-02/main/images/John%20Doe%203.jpg"
             alt="Marketing"
             width="270"
-            height="368"
+            height="260"
           />
+          <figcaption>
+            <span>John Doe</span><p>Marketing</p>
+          </figcaption>
+          </figure>
         </li>
         <li>
+          <figure>
           <img
-            src="https://raw.githubusercontent.com/LuizaRaczylo/goit-markup-hw-01/main/images/team%20card%204.jpg"
+            src="https://raw.githubusercontent.com/LuizaRaczylo/goit-markup-hw-02/main/images/John%20Doe%204.jpg"
             alt="UI Designer"
             width="270"
-            height="368"
+            height="260"
           />
+          <figcaption>
+            <span>John Doe</span><p>UI Designer</p>
+          </figcaption>
+          </figure>
         </li>
       </ul>
     </section>
+  </main>
     <footer>
       <a href="https://www.google.pl/">WebStudio</a>
       <address>m.Warszawa, Aleje Jerozolimskie 21</address>
